-Arreglos en front y validaciones en back